// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle should render animation correctly (snapshot) 1`] = `
<div>
  <div
    class="wrapper"
    data-testid="toggle-wrapper"
    tabindex="0"
  >
    <span
      aria-current="true"
      class="span"
      style="opacity: 1; transform: none;"
    >
      <div>
        Close
      </div>
    </span>
  </div>
</div>
`;

exports[`Toggle should render animation correctly (snapshot) 2`] = `
<div>
  <div
    class="wrapper"
    data-testid="toggle-wrapper"
    tabindex="0"
  >
    <span
      aria-current="true"
      class="span"
      style="opacity: 0; transform: scale(0) rotate(180deg);"
    >
      <div>
        Close
      </div>
    </span>
  </div>
</div>
`;

exports[`Toggle should render animation correctly (snapshot) 3`] = `
<div>
  <div
    class="wrapper"
    data-testid="toggle-wrapper"
    tabindex="0"
  >
    <span
      aria-current="true"
      class="span"
      style="opacity: 1; transform: none;"
    >
      <div>
        Open
      </div>
    </span>
  </div>
</div>
`;

exports[`Toggle should render animation correctly (snapshot) 4`] = `
<div>
  <div
    class="wrapper"
    data-testid="toggle-wrapper"
    tabindex="0"
  >
    <span
      aria-current="true"
      class="span"
      style="opacity: 0; transform: scale(0) rotate(180deg);"
    >
      <div>
        Open
      </div>
    </span>
  </div>
</div>
`;
